--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,80 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/Backend/venv
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+.yarn/install-state.gz
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# Python/Django
 *.pyc
+__pycache__/
+*.pyo
+*.pyd
+.Python
+*.sqlite3
+
+# Entorno virtual (venv) en el directorio backend
+backend/venv/
+backend/env/
+env/
+venv/
+
+# Configuración Django
+db.sqlite3
+*.sqlite3
+*.log
+*.pot
 *.pyc
+*.pyo
+*.pyd
+.Python
+migrations/
+*.db
+instance/
+.webassets-cache
+scrapy.cfg
+*.pot
+celerybeat-schedule
+*.sage
+
+# Django static/media
+staticfiles/
+media/
+
+# VSCode y PyCharm
+.vscode/
+.idea/
+
+# Archivos de entorno (por ejemplo, variables de entorno)
+.env
+.env.*
