--- a/Backend/rest_api/.env
+++ b/Backend/rest_api/.env
@@ -1,3 +1,7 @@
 DJANGO_BASE_FRONTEND_URL=http://localhost:3000
 GOOGLE_OAUTH2_CLIENT_ID=1020098600570-ress3lrk6co2csa2qbn3hp4mkiv1depk.apps.googleusercontent.com
 GOOGLE_OAUTH2_CLIENT_SECRET=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%
+
+ZMQ_IP=
+ZMQ_PORT=
+ZMQ_TIMEOUT=
