pasaje de msjs backend - rpi

--- a/Backend/rest_api/.env
+++ b/Backend/rest_api/.env
@@ -2,6 +2,6 @@ DJANGO_BASE_FRONTEND_URL=http://localhost:3000
 GOOGLE_OAUTH2_CLIENT_ID=1020098600570-ress3lrk6co2csa2qbn3hp4mkiv1depk.apps.googleusercontent.com
 GOOGLE_OAUTH2_CLIENT_SECRET=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%
 
-ZMQ_IP=192.168.1.170
+ZMQ_IP=
 ZMQ_PORT=5555
 ZMQ_TIMEOUT=
