--- a/Backend/rest_api/.env
+++ b/Backend/rest_api/.env
@@ -2,8 +2,10 @@ DJANGO_BASE_FRONTEND_URL=http://localhost:3000
 GOOGLE_OAUTH2_CLIENT_ID=1020098600570-ress3lrk6co2csa2qbn3hp4mkiv1depk.apps.googleusercontent.com
 GOOGLE_OAUTH2_CLIENT_SECRET=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%
 
-ZMQ_IP=127.0.0.1
+ZMQ_IP=192.168.1.38
 ZMQ_PORT=5555
 ZMQ_TIMEOUT=50
+
+#ZMQ_IP = mac lisan
 
 ZMQ_CONECTION_VERSION=1
